--- a/packages/user_repository/pubspec.yaml
+++ b/packages/user_repository/pubspec.yaml
@@ -10,7 +10,8 @@ dependencies:
     sdk: flutter
   freezed_annotation: ^2.4.1
   json_annotation: ^4.8.1
-
+  uuid: ^3.0.0
+  
 dev_dependencies:
   build_runner: ^2.4.7
   freezed: ^2.4.3
