--- a/packages/authentication_repository/pubspec.yaml
+++ b/packages/authentication_repository/pubspec.yaml
@@ -9,10 +9,17 @@ dependencies:
   equatable: ^2.0.5
   firebase_auth: ^4.14.1
   firebase_core: ^2.23.0
-  flutter:
-    sdk: flutter
   google_sign_in: ^6.1.0
   meta: ^1.8.0
+
+  flutter:
+    sdk: flutter
+  
+  user_repository:
+    path: ../user_repository
+  
+  cache:
+    path: ../cache
 
 dev_dependencies:
   firebase_auth_platform_interface: ^7.0.5
