--- a/packages/post_repository/pubspec.yaml
+++ b/packages/post_repository/pubspec.yaml
@@ -6,6 +6,8 @@ environment:
   sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
+  cloud_firestore: ^5.0.2
+  firebase_storage: ^12.1.0
   flutter:
     sdk: flutter
   freezed_annotation: ^2.4.1
@@ -14,5 +16,5 @@ dependencies:
   
 dev_dependencies:
   build_runner: ^2.4.7
-  freezed: ^2.4.3
+  freezed: ^2.5.2
   json_serializable: ^6.7.1
