--- a/packages/post_repository/pubspec.yaml
+++ b/packages/post_repository/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   firebase_storage: ^12.1.0
   flutter:
     sdk: flutter
+  formz: ^0.7.0
   freezed_annotation: ^2.4.1
   json_annotation: ^4.9.0
   uuid: ^3.0.0
