--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
     path: packages/post_repository
   firebase_auth: ^5.1.1
   image_picker: ^1.1.2
+  date_format: ^2.0.7
   
 dev_dependencies:
   flutter_test:
