--- a/packages/user_repository/pubspec.yaml
+++ b/packages/user_repository/pubspec.yaml
@@ -11,6 +11,10 @@ dependencies:
   freezed_annotation: ^2.4.1
   json_annotation: ^4.8.1
   uuid: ^3.0.0
+  firebase_auth: ^5.1.1
+  firebase_core: ^3.1.1
+  cloud_firestore: ^5.0.2
+  firebase_storage: ^12.1.0
   
 dev_dependencies:
   build_runner: ^2.4.7
