--- a/packages/authentication_repository/pubspec.yaml
+++ b/packages/authentication_repository/pubspec.yaml
@@ -9,6 +9,7 @@ dependencies:
   equatable: ^2.0.5
   firebase_auth: ^5.1.1
   firebase_core: ^3.1.1
+  cloud_firestore: ^5.0.2
   google_sign_in: ^6.1.0
   meta: ^1.8.0
 
